--- a/app/styles/main/main.css
+++ b/app/styles/main/main.css
@@ -92,6 +92,13 @@ a:hover {
   }
 }
 
+.sr-only {
+  width: 0;
+  height: 0;
+  position: absolute;
+  overflow: hidden;
+}
+
 .hidden {
   visibility: hidden;
   overflow: hidden;
