--- a/app/styles/main/main-header.css
+++ b/app/styles/main/main-header.css
@@ -2,25 +2,40 @@
   background-color: var(--c-black);
   display: flex;
   justify-content: space-between;
-  gap: .5rem;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .header__search {
   border-radius: 1.5rem;
-  background-color: var(--c-white);
+  background-color: var(--c-black);
   display: flex;
   align-items: stretch;
-  gap: .5rem;
-  padding: .25rem;
+  height: fit-content;
+  padding: 0.5rem;
+  gap: 0.5rem;
   overflow: hidden;
   font-size: smaller;
+  position: relative;
+  isolation: isolate;
+}
+
+.header__search:focus-within {
+  background-color: var(--c-white);
 }
 
 .header__search--input {
+  width: 0;
+  overflow: hidden;
+}
+
+.header__search:focus-within .header__search--input {
   width: 100%;
 }
+
 .header__search--button {
   color: var(--c-red--ds);
+  font-size: 120%;
 }
 
 .header__search--input,
@@ -30,7 +45,17 @@
 
 .header__login {
   color: var(--c-red);
-  border: .125rem solid var(--c-red);
+  border: 0.125rem solid var(--c-red);
   padding: 1rem 2rem;
   text-align: center;
+}
+
+@media screen and (min-width: 512px) {
+  .header__search--input {
+    width: 100%;
+  }
+
+  .header__search {
+    background-color: var(--c-white);
+  }
 }
