--- a/app/styles/main/main-header.css
+++ b/app/styles/main/main-header.css
@@ -6,6 +6,10 @@
   gap: 0.5rem;
 }
 
+.header__logo > img {
+  width: 100%;
+}
+
 .header__search {
   border-radius: 1.5rem;
   background-color: var(--c-black);
@@ -46,7 +50,7 @@
 .header__login {
   color: var(--c-red);
   border: 0.125rem solid var(--c-red);
-  padding: 1rem 2rem;
+  padding: 0.75rem 1.25rem;
   text-align: center;
 }
 
@@ -57,5 +61,29 @@
 
   .header__search {
     background-color: var(--c-white);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__login {
+    padding: 1rem 1.5rem;
+  }
+
+  .header__logo {
+    min-width: 8rem;
+  }  
+
+  .header__search {
+    min-width: 15rem;
+  }
+}
+
+@media screen and (min-width: 1140px) {
+  .header__login {
+    padding: 1rem 2rem;
+  }
+
+  .header__search {
+    min-width: 20rem;
   }
 }
