--- a/app/styles/editor/editor.css
+++ b/app/styles/editor/editor.css
@@ -13,7 +13,6 @@
 
 .editor__form,
 .editor__title {
-  max-width: 20.5rem;
   width: 100%;
 }
 
@@ -26,7 +25,7 @@
 }
 
 .editor__legend {
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   margin-bottom: 1rem;
 }
 
@@ -48,6 +47,7 @@
 .editor__submit {
   background-color: var(--c-red);
   color: var(--c-white--ls);
+  text-transform: uppercase;
   padding-block: 1rem;
   width: 100%;
   font-weight: 600;
@@ -58,10 +58,15 @@
   .editor__title {
     max-width: 34.9375rem;
   }
+
+  .editor__legend {
+    font-size: 1.25rem;
+  }
 }
 
 @media screen and (min-width: 1140px) {
   .editor__title {
     font-size: 2rem;
+    text-align: center;
   }
 }
