--- a/app/styles/store/products.css
+++ b/app/styles/store/products.css
@@ -1,5 +1,5 @@
 .main__catalog,
-.card {
+.products__list .card {
   display: flex;
   flex-flow: column nowrap;
 }
@@ -27,13 +27,13 @@
 
 .products__list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min(156px, 100%), 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(156px, 100%), 9.75rem));
   gap: 1rem;
 
   list-style: none;
 }
 
-.card {
+.products__list .card {
   justify-content: space-between;
   gap: 0.5rem;
   background-color: var(--c-white--ls);
@@ -53,8 +53,8 @@
 
 .card__figure--image {
   order: 1;
-  max-width: 10rem;
-  max-height: 10rem;
+  max-width: 9.25rem;
+  max-height: 9.25rem;
   object-fit: contain;
   align-self: center;
 }
@@ -112,7 +112,7 @@
   }
 
   .products__list {
-    grid-template-columns: repeat(auto-fit, minmax(min(164px, 100%), 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(164px, 100%), 10.25rem));
   }
 
   .product__panel {
@@ -139,9 +139,9 @@
   .products__list {
     padding: 1rem var(--margin-lg);
   }
-
+  
   .products__list {
-    grid-template-columns: repeat(auto-fit, minmax(min(176px, 100%), 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(176px, 100%), 11rem));
   }
 
   .product__panel--close {
