--- a/app/styles/main/main.css
+++ b/app/styles/main/main.css
@@ -7,6 +7,7 @@
 @import url('../login/login.css');
 @import url('../editor/editor.css');
 @import url('../editor/editor-status.css');
+@import url('../search/search.css');
 
 :root {
   --c-black: hsl(260, 14%, 5%);
