--- a/app/styles/main/main-contact.css
+++ b/app/styles/main/main-contact.css
@@ -1,17 +1,22 @@
-.contact--fieldset,
 .nav__list,
 .info__contact,
+.contact--fieldset,
 .contact__section {
   display: flex;
   flex-flow: column nowrap;
 }
 
 .context__info {
-  background-color: var(--c-white--d);
+  background-color: var(--c-carbon--l);
   display: grid;
   grid-template-areas: "logo" "links" "form";
   grid-template-rows: auto;
   grid-template-columns: 1fr;
+}
+
+.context__info,
+.contact--fieldset,
+.nav__list {
   gap: 1rem;
 }
 
@@ -26,11 +31,9 @@
 }
 
 .nav__list {
-  gap: 1rem;
   text-align: center;
   list-style: none;
   font-weight: 500;
-  color: var(--c-black--ls);
 }
 
 .nav__link {
@@ -43,7 +46,6 @@
 
 .contact--fieldset {
   border: none;
-  gap: 1rem;
 }
 
 .contact__legend {
@@ -53,13 +55,15 @@
 .contact__section {
   width: 100%;
   background-color: var(--c-white--ds);
-  border-radius: .25rem;
-  padding: .5rem .75rem;
+  border-radius: 0.25rem;
+  padding: 0.5rem 0.75rem;
+  color: var(--c-black);
 }
 
 .contact__submit {
-  background-color: var(--c-red);
-  padding: .75rem 1rem;
+  background-color: var(--c-red--l);
+  padding: 0.75rem 1rem;
+  border-radius: 0.25rem;
   max-width: 12rem;
   font-weight: 600;
   color: var(--c-white);
@@ -87,5 +91,3 @@
     gap: 4rem;
   }
 }
-
-
