--- a/app/styles/main/main-context.css
+++ b/app/styles/main/main-context.css
@@ -1,9 +1,8 @@
 .context__main--index .main__hero {
   background: linear-gradient(
         to bottom,
-        rgba(0, 0, 0, 0.2),
-        rgba(0, 0, 0, 0.4),
-        rgba(0, 0, 0, 0.8)
+        rgba(0, 0, 0, 0.7),
+        rgba(0, 0, 0, 0.7)
       )
       100%,
     url("../../assets/images/geeky-shots-hQ4BQ3wdHsQ-unsplash.jpg") no-repeat
@@ -18,9 +17,8 @@
 .context__main--products .main__hero {
   background: linear-gradient(
         to bottom,
-        rgba(0, 0, 0, 0.2),
-        rgba(0, 0, 0, 0.4),
-        rgba(0, 0, 0, 0.8)
+        rgba(0, 0, 0, 0.7),
+        rgba(0, 0, 0, 0.7)
       )
       100%,
     url("../../assets/images/erik-mclean-8SeJUmfahu0-unsplash.jpg") no-repeat
@@ -30,9 +28,8 @@
 .context__main--search .main__hero {
   background: linear-gradient(
         to bottom,
-        rgba(0, 0, 0, 0.2),
-        rgba(0, 0, 0, 0.4),
-        rgba(0, 0, 0, 0.8)
+        rgba(0, 0, 0, 0.7),
+        rgba(0, 0, 0, 0.7)
       )
       100%,
     url("../../assets/images/camila-fernandez-fYm4-WeD_fg-unsplash.jpg")
@@ -47,19 +44,20 @@
 }
 
 .hero__title {
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
-.hero__desc {
+.hero__desc,
+.hero__btn {
   font-weight: 600;
 }
 
 .hero__btn {
-  background-color: var(--c-red);
+  background-image: linear-gradient(to bottom, var(--c-red), var(--c-black--ls));
   max-width: 10rem;
   padding: 0.75rem 1rem;
-  font-weight: 600;
   color: inherit;
+  border-radius: 2rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -85,5 +83,10 @@
 
   .hero__title {
     font-size: 3rem;
+  }
+
+  .hero__title,
+  .hero__desc {
+    max-width: calc(50vw - var(--margin-lg) / 2);
   }
 }
