--- a/app/styles/main/main-footer.css
+++ b/app/styles/main/main-footer.css
@@ -1,5 +1,5 @@
 .context__footer {
-  background-color: var(--c-gray--ds);
+  background-color: var(--c-carbon);
   color: var(--c-white);
   text-align: center;
   padding: var(--margin-md);
@@ -7,4 +7,12 @@
 
 .footer__link {
   color: var(--c-red--ls);
+  font-weight: 600;
+}
+
+@media screen and (min-width: 1140px) {
+  .context__footer {
+    padding-inline: var(--margin-lg);
+    padding-block: var(--margin-md);
+  }
 }
