--- a/app/styles/main/main-header.css
+++ b/app/styles/main/main-header.css
@@ -1,9 +1,13 @@
-.context__header {
+.context__header,
+.header__search {
+  gap: 0.5rem;
   background-color: var(--c-black);
   display: flex;
+}
+
+.context__header {
   justify-content: space-between;
   align-items: center;
-  gap: 0.5rem;
 }
 
 .header__logo > img {
@@ -12,12 +16,9 @@
 
 .header__search {
   border-radius: 1.5rem;
-  background-color: var(--c-black);
-  display: flex;
   align-items: stretch;
   height: fit-content;
   padding: 0.5rem;
-  gap: 0.5rem;
   overflow: hidden;
   font-size: smaller;
   position: relative;
@@ -38,51 +39,46 @@
 }
 
 .header__search--button {
-  color: var(--c-red);
-  font-size: 120%;
+  font-size: 1.25rem;
 }
 
-.header__search--input,
+.header__search--button,
 .header__login {
-  background-color: transparent;
+  color: var(--c-red--ls);
 }
 
 .header__login {
-  color: var(--c-red);
-  border: 0.125rem solid var(--c-red);
+  font-weight: 600;
+  border: 0.125rem solid var(--c-red--ls);
   padding: 0.75rem 1.25rem;
   text-align: center;
 }
 
 @media screen and (min-width: 512px) {
-  .header__search--input {
-    width: 100%;
-  }
-
   .header__search {
     background-color: var(--c-white);
+  }
+  
+  .header__search--input {
+    width: 100%;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .header__login {
-    padding: 1rem 1.5rem;
-  }
-
   .header__logo {
     min-width: 8rem;
-  }  
+  }
 
   .header__search {
     min-width: 15rem;
   }
+
+  .header__login {
+    padding: 1rem 1.5rem;
+  }
 }
 
 @media screen and (min-width: 1140px) {
-  .header__login {
-    padding: 1rem 2rem;
-  }
-
   .header__search {
     min-width: 20rem;
   }
