--- a/app/styles/main/main-footer.css
+++ b/app/styles/main/main-footer.css
@@ -1,5 +1,5 @@
 .context__footer {
-  background-color: var(--c-carbon);
+  background-color: var(--c-black--l);
   color: var(--c-white);
   text-align: center;
   padding: var(--margin-md);
