--- a/app/styles/main/main.css
+++ b/app/styles/main/main.css
@@ -3,11 +3,11 @@
 @import url("./main-footer.css");
 @import url("./main-contact.css");
 @import url("./main-context.css");
-@import url('../store/products.css');
-@import url('../login/login.css');
-@import url('../editor/editor.css');
-@import url('../editor/editor-status.css');
-@import url('../search/search.css');
+@import url("../store/products.css");
+@import url("../login/login.css");
+@import url("../editor/editor.css");
+@import url("../editor/editor-status.css");
+@import url("../search/search.css");
 
 :root {
   --c-black--ds: hsl(260, 14%, 1%);
@@ -28,9 +28,9 @@
   --c-white: hsl(340, 10%, 90%);
   --c-white--l: hsl(340, 10%, 95%);
   --c-white--ls: hsl(340, 10%, 100%);
-  --c-red--ds: hsl(356, 80%, 40%);
-  --c-red--d: hsl(356, 80%, 45%);
-  --c-red: hsl(356,80%, 50%);
+  --c-red--ds: hsl(356, 80%, 35%);
+  --c-red--d: hsl(356, 80%, 40%);
+  --c-red: hsl(356, 80%, 50%);
   --c-red--l: hsl(356, 80%, 55%);
   --c-red--ls: hsl(356, 80%, 60%);
   --margin-sm: 1rem;
@@ -49,8 +49,7 @@ html {
 
 body * {
   font-family: "Raleway", sans-serif;
-  letter-spacing: .0625rem;
-
+  letter-spacing: 0.0625rem;
 }
 
 body {
@@ -67,7 +66,9 @@ select {
   background-color: transparent;
 }
 
-button, label, select {
+button,
+label,
+select {
   cursor: pointer;
 }
 
@@ -76,7 +77,7 @@ button, label, select {
   color: var(--c-white);
 }
 
-input, 
+input,
 img {
   max-width: 100%;
 }
@@ -95,29 +96,22 @@ a:hover {
 
 .context__header,
 .context__info {
-  padding: var(--margin-sm);
+  padding: var(--margin-sm) 1.5rem;
 }
 
 @media screen and (min-width: 768px) {
   .context__header,
   .context__info {
-    padding: var(--margin-md);
+    padding: 2rem 2.5rem;
   }
 }
 
 @media screen and (min-width: 1140px) {
   .context__header,
   .context__info {
-    padding-block: var(--margin-md);
-    padding-inline: var(--margin-lg);
+    padding-block: 2.5rem;
+    padding-inline: 4.5rem;
   }
-}
-
-.sr-only {
-  width: 0;
-  height: 0;
-  position: absolute;
-  overflow: hidden;
 }
 
 .hidden {
@@ -134,7 +128,11 @@ a:hover {
   color: var(--c-red--ls);
 }
 
-input:focus, a:focus, button:focus, textarea:focus, select:focus {
+input:focus,
+a:focus,
+button:focus,
+textarea:focus,
+select:focus {
   outline: none;
 }
 
@@ -148,7 +146,7 @@ input:focus, a:focus, button:focus, textarea:focus, select:focus {
 
 *::-webkit-scrollbar-thumb {
   background-color: var(--c-red--ls);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
 @media screen and (min-width: 512px) {
